Fix horizontal overflow for modals

--- a/css/modal.css
+++ b/css/modal.css
@@ -104,6 +104,12 @@
   }
 }
 
+@media only screen and (max-height: 925px) {
+  .modal_content {
+    overflow: scroll;
+  }
+}
+
 /* The Close Button */
 .close {
     color: #aaa;
